Funciones Nuevas Terms and conditions - user

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 #production
 NODE_ENV=environment
 #SERVER
-PROY_APP_PORT=3000
+PROY_APP_PORT=4001
 
 #DB
 PROY_BD=map_control
@@ -24,11 +24,12 @@ SENDER_ALIAS=MapControl <no-reply@mapcontrol.pe>
 
 
 #SENGRID KEY
-SENDGRID_KEY=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
+SENDGRID_KEY=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
+
 
 
 #
-PROY_FEURL=http://localhost:3000/#
+PROY_FEURL=http://localhost:4200/#
 PROY_BEURL=http://localhost:4001
 
 #ONE SIGNAL
