--- a/DockerFile
+++ b/DockerFile
@@ -4,6 +4,7 @@ COPY package*.json ./
 RUN rm -rf node_modules
 RUN npm install
 COPY . .
-RUN npm run build 
+RUN npm run build
+RUN mkdir dist/assets
 EXPOSE 5040
 CMD ["npm","start","PROD"]
