--- a/.env
+++ b/.env
@@ -6,10 +6,10 @@ NODE_ENV=environment
 PROY_APP_PORT=4001
 
 #DB
-PROY_BD=map_control
-PROY_BD_HOST=localhost
-PROY_BD_USER=root
-PROY_BD_PASS=
+PROY_BD=heroku_397067ff49335e4
+PROY_BD_HOST=nika-be.herokuapp.com
+PROY_BD_USER=b5ef8605a1a7e4
+PROY_BD_PASS=2aa5490f
 PROY_BD_PORT=3306
 
 #KEY JWT
