--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ PROY_APP_PORT=4001
 
 #DB
 PROY_BD=heroku_397067ff49335e4
-PROY_BD_HOST=nika-be.herokuapp.com
+PROY_BD_HOST=us-cdbr-east-05.cleardb.net
 PROY_BD_USER=b5ef8605a1a7e4
 PROY_BD_PASS=2aa5490f
 PROY_BD_PORT=3306
