--- a/.env
+++ b/.env
@@ -30,7 +30,7 @@ SENDGRID_KEY=SG.OR6jK1xUT4CWt3ipMshQjQ.5unEu55o8wTn6DCvbuQV3FN_fiH3nPFtUvV9bq1V_
 
 #
 PROY_FEURL=http://localhost:4200/#
-PROY_BEURL=http://localhost:4001
+PROY_BEURL=https://nika-be.herokuapp.com
 
 #ONE SIGNAL
 ONE_SIGNAL_APP_ID=f10f4fad-bb50-4e88-ad8f-813e89803883
