--- a/.env
+++ b/.env
@@ -6,10 +6,10 @@ NODE_ENV=environment
 PROY_APP_PORT=4001
 
 #DB
-PROY_BD=heroku_397067ff49335e4
-PROY_BD_HOST=us-cdbr-east-05.cleardb.net
-PROY_BD_USER=b5ef8605a1a7e4
-PROY_BD_PASS=2aa5490f
+PROY_BD=map_control
+PROY_BD_HOST=nikacontrol.cygdia0h3sub.us-east-2.rds.amazonaws.com
+PROY_BD_USER=bjortiz
+PROY_BD_PASS=Tzsp7186
 PROY_BD_PORT=3306
 
 #KEY JWT
