--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ SENDGRID_KEY=SG.OR6jK1xUT4CWt3ipMshQjQ.5unEu55o8wTn6DCvbuQV3FN_fiH3nPFtUvV9bq1V_
 
 
 #
-PROY_FEURL=http://localhost:4200/#
+PROY_FEURL=https://www.nika.admin.obrysoft.com/
 PROY_BEURL=https://nika-be.herokuapp.com
 
 #ONE SIGNAL
