--- a/package.json
+++ b/package.json
@@ -58,6 +58,6 @@
   "scripts": {
     "start": "node ./dist/index.js",
     "dev": "nodemon",
-    "build": "tsc"
+    "build": "npm run tsc"
   }
 }
