--- a/.env
+++ b/.env
@@ -29,8 +29,8 @@ SENDGRID_KEY=SG.y-2P88PFRVG-rOC-yNICpQ.8hynIY2OwGm-t0-CueTSynp3qqDCD_ec7b5CB3PoT
 
 
 #
-PROY_FEURL=https://www.nika.admin.obrysoft.com/
-PROY_BEURL=https://localhost:4500
+PROY_FEURL=http://localhost:4200
+PROY_BEURL=http://localhost:4001
 
 #ONE SIGNAL
 ONE_SIGNAL_APP_ID=f10f4fad-bb50-4e88-ad8f-813e89803883
