--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ SENDER_ALIAS=NikaApp <no-reply@obrysoft.com>
 
 
 #SENGRID KEY
-SENDGRID_KEY=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
+SENDGRID_KEY=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
 
 
 
