Endpoint Ubigeo listo

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,19 @@
 {
+  "arrowParens": "always",
+  "bracketSameLine": false,
+  "bracketSpacing": true,
+  "embeddedLanguageFormatting": "auto",
+  "htmlWhitespaceSensitivity": "css",
+  "insertPragma": false,
+  "jsxSingleQuote": false,
+  "printWidth": 80,
+  "proseWrap": "preserve",
+  "quoteProps": "as-needed",
+  "requirePragma": false,
+  "semi": true,
+  "singleQuote": false,
   "tabWidth": 2,
-  "singleQuote": true,
-  "semi": false,
-  "printWidth": 110,
-  "bracketSpacing": true
+  "trailingComma": "es5",
+  "useTabs": false,
+  "vueIndentScriptAndStyle": false
 }
